--- a/src/pages/admin/members/members.css
+++ b/src/pages/admin/members/members.css
@@ -1,20 +1,15 @@
 .members {
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: start;
-    gap: var(--s); */
     display: flex;
     flex-direction: column;
     gap: var(--s);
 }
 
 .members__search {
-    grid-column: 1 / 3;
     background-color: var(--new-2);
     border-radius: var(--xs);
     display: flex;
     align-items: center;
-    /* font-size: var(--font-s); */
+    font-size: var(--font-s);
     border: 0.2rem solid transparent;
 }
 
@@ -102,6 +97,12 @@
     border-radius: var(--s);
 }
 
+.member__buttons {
+    display: flex;
+    align-items: center;
+    gap: var(--xxs);
+}
+
 .member__button {
     width: 2rem;
     height: 2rem;
@@ -134,4 +135,66 @@
 
 .inactive .member__badge {
     background-color: var(--error);
+}
+
+.members .empty {
+    margin-top: var(--xxxl);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: var(--xxxs);
+}
+
+
+
+/* media query */
+@media (max-width: 640px) {
+
+    .members__group {
+        /* flex-direction: row; */
+        flex-wrap: wrap;
+    }
+
+    .member {
+        flex-wrap: wrap;
+        row-gap: var(--xl);
+    }
+    
+    .member__name {
+        flex: 1;
+    }
+
+    .member__date {
+        align-self: flex-start;
+    }
+
+    .member > .line {
+        display: none;
+    }
+
+    .member__buttons {
+        flex: 100%;
+    }
+
+    .member__badge {
+        margin-bottom: var(--xs);
+    }
+
+    .member__buttons {
+        justify-content: flex-end;
+    }
+    
+}
+
+@media (max-width: 480px) {
+
+    .member__date {
+        flex: 100%;
+        margin-left: var(--s);
+    } 
+    
+    .member__buttons {
+        justify-content: flex-start;
+        margin-left: var(--s);
+    }
 }
