--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -29,6 +29,11 @@
     object-position: center;
 }
 
+.supplement__placeholder {
+    aspect-ratio: 1;
+    background-color: rgba(255 255 255 / 0.04);
+}
+
 .supplement__header {
     display: flex;
     flex-direction: column;
@@ -75,12 +80,18 @@
     gap: var(--xs);
 }
 
-.product__image {
+.product__image,
+.product__placeholder {
     width: 16rem;
     aspect-ratio: 1;
     object-fit: cover;
     object-position: center;
     border-radius: var(--xs);
+}
+
+.product__placeholder {
+    min-width: 16rem;
+    background-color: rgba(255 255 255 / 0.04);
 }
 
 .product__title {
@@ -126,13 +137,32 @@
     transition: 0.2s;
     cursor: pointer;
     background-color: var(--new-2);
-    /* background-color: rgba(255 255 255 / 0.04); */
 }
 
 .product__back-button:hover {
     filter: brightness(1.2);
 }
 
+.product .empty {
+    margin-top: var(--xxxl);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.product .empty a {
+    font-family: var(--manrope);
+    font-size: var(--font-s);
+    text-decoration: underline;
+    opacity: 0.6;
+    transition: 0.2s;
+}
+
+.product .empty a:hover {
+    opacity: 1;
+}
 
 
 /* media query */
