--- a/src/layouts/user/user-layout.css
+++ b/src/layouts/user/user-layout.css
@@ -2,6 +2,19 @@
     display: flex;
     flex-direction: column;
     gap: var(--xxl);
+    position: relative;
+}
+
+.user::after {
+    content: '';
+    position: absolute;
+    top: -4%;
+    left: 0;
+    width: 20rem;
+    aspect-ratio: 1;
+    background: linear-gradient(to top, #0f2027, #203a43, #2c5364);
+    filter: blur(8rem);
+    z-index: -1;
 }
 
 .user__title {
