--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -9,7 +9,7 @@
     padding: 0.2rem;
     aspect-ratio: 1;
     border-radius: 520%;
-    background-color: var(--new-1);
+    background-color: var(--bg-1);
     --_m: 
       conic-gradient(#0000 10%,#000),
       linear-gradient(#000 0 0) content-box;
