--- a/src/pages/user/home/home.css
+++ b/src/pages/user/home/home.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--xxxl);
-    background-color: var(--new-2);
+    background-color: var(--bg-2);
     padding: var(--xs);
     border-radius: var(--s);
 }
@@ -24,7 +24,7 @@
 }
 
 .user-home__date div {
-    font-size: var(--font-s-xs);
+    font-size: var(--font-xs);
     text-align: center;
 }
 
@@ -38,18 +38,18 @@
 }
 
 .user-home__body button {
-    background-color: var(--new-3);
+    background-color: var(--text-1);
     border-radius: var(--m);
     cursor: default;
 }
 
 .user-home__body button:hover .icon {
     scale: 1.04;
-    background-color: var(--new-2);
+    background-color: var(--bg-2);
 }
 
 .user-home__body .icon {
-    background-color: var(--new-1);
+    background-color: var(--bg-1);
     width: 6rem;
     aspect-ratio: 1;
     border-radius: var(--m);
@@ -65,8 +65,8 @@
 
 .user-home__body button div {
     text-align: center;
-    font-size: var(--font-s-xs);
-    color: var(--new-2);
+    font-size: var(--font-xs);
+    color: var(--bg-2);
     font-weight: var(--light);
 }
 
